[package]
name = "acme-sentry-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
job-execution = { path = "./job-execution" }
acme-client = { path = "./acme-client" }
persistence = { path = "./persistence" }
common-utils = { path = "./common-utils" }
serde_json = "1.0.140"

[workspace]
resolver = "3"
members = ["acme-client", "common-utils", "job-execution", "persistence"]