[package]
name = "acme-sentry-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
acme-client = { path = "./acme-client" }
persistence = { path = "./persistence" }
common-utils = { path = "./common-utils" }
serde_json = "1.0.149"
async-trait = "0.1.89"
reqwest = { version = "0.13.1", features = ["blocking"] }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.5.60", features = ["derive", "cargo"] }
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
sqlite = "0.37.0"

[workspace]
resolver = "3"
members = ["acme-client", "common-utils", "persistence"]
